# SteelOps

./: package-lock.json  run_dev.bat  steelops.db
backend/: .env.example  .gitignore  auto_process.py  check_db.py  database.py  find_comm_type.py  find_edit_form.py  find_inquiry_ui.py  find_project_db_details.py  find_project_db_ui.py  find_quote_bidding_details.py  find_tabs.py  find_tech_review_ui.py  gmail_service.py  main.py  models.py  pyproject.toml  schemas.py  search_func.py  seed.py  send_sample_email.py  steelops.db  take_screenshot.py  test_heuristic.py  test_interactive_mapping.py  test_pdf_extract.py  test_sync.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
